<resources>
    <string name="app_name">DripBlood</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="achiev">Achievements</string>

    <string name="directions_api_key">AIzaSyBYfc6ryhfPyx17Ja1YGxitE89W8KiOO0o</string>
    <string name="web_client_id">262941096612-lqe4875jf26e8f5l6htkrd9v09tsbg4s.apps.googleusercontent.com</string>

    <!--Facebook-->
    <string name="facebook_app_id">741455840416214</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">4c8641c3bfa21c7ce81ea38e2f1c6d9c</string>

    <!-- Strings related to login -->
    <string name="signup">Register</string>
    <string name="prompt_email">Email</string>
    <string name="register">Create an account</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Name</string>
    <string name="nav_header_subtitle">youremail@dripblood.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reset">RESET</string>
    <string name="displayName">Full Name</string>
    <string name="mobile">Mobile No</string>
    <string name="userAddress">Address</string>
    <string name="nearB">Find Blood Points</string>
    <string name="fndBlood">My Requests</string>
    <string name="lgout">Log out</string>
    <string name="devinfo">About us</string>
    <string name="bloodinfo">Blood Info</string>
    <string name="BloodGroup">Blood Group</string>
    <string name="Division">Choose Division</string>
    <string name="Post">Post</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>


    <string-array name="division_list">
        <item>Binalbagan</item>
        <item>Himamaylan</item>
        <item>Hinigaran</item>
        <item>Kabankalan</item>
        <item>Cauyan</item>
        <item>Sipalay</item>
        <item>Candoni</item>
        <item>Dumaguete</item>

    </string-array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string name="eligibility_">Eligibility Requirements</string>
    <string name="female_">If you are female, you must:\n Be healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 5 inch\nWeigh at least 150 lbs.</string>
    <string name="male_">If you are male, you must:\nBe healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 1 inch \nWeigh at least 130 lbs.\n</string>
    <string name="info_">Giving blood saves lives. The blood you give is a lifeline in an emergency and for people who need long-term treatments. Many people would not be alive today if donors had not generously given their blood. \n\nWhy we need you to give blood?\n\n We need over 6000 blood donations every day to treat patients in need for people to give blood.\n\nEach year we need approximately 200000 new donors, as some donors can no longer give blood.Most people between ages of 17-65 are able to give blood. Around half our current donors are over 45.That is why we need more young people to start giving blood.</string>
    <string name="aboutus">This is a powerful application, built by Vihidu Siththaru De Silva with great effort to convey the good will of blood donations. This app is mainly based on blood donation and collecting. Here, blood donors gets connected with people needs blood. App features include: \n
                <b>Post Blood Requests</b> \n
                <b>Find Blood Required Patients</b> \n
                <b>Get Directions</b> \n
                <b>Call / Message</b> \n
                <b>Get Notifications</b> \n
                <b>Save Achievements</b>\n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="patient_details"><u>Patient Details</u></string>
    <string name="manage_requests"><u>Manage Requests</u></string>


</resources>
