<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="#F8E7F2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:src="@drawable/logo" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.03"
            android:text="Register"
            android:textColor="@color/primary_dark"
            android:textSize="35dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/forget"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="@color/primary"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/forget"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/primary"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/forget"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/primary"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button"
            android:text="Register"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>